<resources>
    <string name="app_name">GitUS.</string>
    <string name="username">Username</string>
    <string name="searchbar_hint">Whom are you looking for?</string>
    <string name="repo_amount">0</string>
    <string name="following_amount">0</string>
    <string name="followers_amount">0</string>
    <string name="following">Following</string>
    <string name="followers">Followers</string>
    <string name="repo">Repository</string>
    <string name="name">Name</string>
    <string name="menu_1">Favorite Pages</string>
    <string name="menu_2">Light &amp; Dark Mode</string>
    <string name="img_avatar">Avatar User Image</string>
    <string name="tab_layout">Tab Layout</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="empty_data">Data is empty.</string>
    <string name="empty_data_illustration">Empty data Illustration</string>
    <string name="share">Share URL</string>
</resources>